# ChainGuard-Decentralized-AI-Security-Agent

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ml_api/: action_label_encoder.pkl  chainguard_rf_model.pkl  chainguard_rf_model1.pkl  ml_api.py
src/final_backend/: Cargo.toml  final_backend.did
src/final_backend/src/: lib.rs
src/final_frontend/: package.json  tailwind.config.js
src/final_frontend/src/: App.css  App.jsx  Dashboard.jsx  StatsCard.jsx  auth.js  index.scss
src/final_frontend/src/components/: About.css  About.jsx  ActivityLog.css  ActivityLog.jsx  Charts.css  Charts.jsx  Header.css  Header.jsx  LoginModal.jsx  LoginPage.css  LoginPage.jsx  PredictionForm.css  PredictionForm.jsx  SecurityNotification.jsx  StatsCard.css  StatsCard.jsx  ThreatAlert.jsx
src/final_frontend/src/services/: backendService.js
src/final_frontend/src/styles/: global.css
