[package]
name = "final_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
ic-cdk = "0.10.0"                # ✅ compatible with candid 0.9
ic-cdk-macros = "0.6.0"          # ✅ matches ic-cdk version
candid = "0.9.5"                 # ✅ matches macro version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
